--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <meta name="robots" content="noindex">
-    <title>Chess club
-        Pin-Up ile En İyi Stratejik Hobiler ve Eğlence Fırsatları</title></head>
+    <title>Volleyball
+        Challenge Pin-up – Plaj Voleybolunda Şampiyon Ol!</title></head>
 <body style="background-color:#eee;">
 <table style="width:100%; height:100%;">
     <tr>
