--- a/index1.html
+++ b/index1.html
@@ -86,7 +86,18 @@
         }
     })();</script>
 </head>
-<body class="t-body" style="margin:0;"> <div id="main"><!--allrecords-->
+<body class="t-body" style="margin:0;">
+<div id="main">
+</div>
+<div id="original">
+    <div class="wrap__btn--PxHri--section">
+        <div class="main__img--l83Xf--section"><img src="images/logo.svg" alt="Logo" class="logo-img">
+            <h1>– 18 yaşınız var?</h1>
+            <div class="button__header--0mbZF--element"><a href="#" class="button button-yes">Bəli</a><a href="#" class="button button-no">Xeyr</a>
+            </div>
+        </div>
+    </div>
+</div><!--allrecords-->
 <div id="allrecords" data-tilda-export="yes" class="t-records" data-hook="blocks-collection-content-node"
      data-tilda-project-id="10709663" data-tilda-page-id="56224395"
      data-tilda-formskey="a55c0c751e1a899d7ce6ec4c10709663" data-tilda-cookie="no" data-tilda-lazy="yes"
@@ -893,16 +904,7 @@ setTimeout(function () {
         }
     })(document, window, '670352d7640516b696425b4a263dee37', 'script', 'js/tilda-stat-1.0.min.js');
 }, 2000);</script>
-</div>
-<div id="original">
-    <div class="wrap__btn--PxHri--section">
-        <div class="main__img--l83Xf--section"><img src="images/logo.svg" alt="Logo" class="logo-img">
-            <h1>– 18 yaşınız var?</h1>
-            <div class="button__header--0mbZF--element"><a href="#" class="button button-yes">Bəli</a><a href="#" class="button button-no">Xeyr</a>
-            </div>
-        </div>
-    </div>
-</div>
+
 </body>
 <script type="application/ld+json">
     {
